{
    "name": "Rocky2DActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "1398ab2b-20bc-4bc2-87a1-9453e3b82550",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "3ac71ab7-bd58-4662-9291-9264614ef17f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "7c7b68a2-3c6d-45c7-993b-e96c1f84613e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a7e60682-1141-4347-b83a-42418094f6ad",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2ba0ca1-faf7-4b13-86e3-1114447f1cf1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63b6a7bd-41e4-4b6a-a66d-c70349900eeb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5a6f887-74e6-4adb-afc9-284eb43bce58",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac1be4bd-eb36-46c1-bdc7-da6a37d1f4eb",
                    "path": "<Keyboard>/f",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}